# lang-n-change

./: .gitignore  LICENSE  README.md  dune-project  lang-n-change.opam  lprolog  lprolog.sh  transform
examples/: big.tr  pattern_matching.tr  ref.tr  subtyping.tr
gradualizer/: README.md  gradual_dynamic.tr  gradual_static.tr  gradual_static_extended.tr
gradualizer/dynamic/: fpl.lan  recursive.lan  stlc.lan  stlc_cbn.lan  stlc_exc.lan  stlc_fix.lan  stlc_if.lan  stlc_inference.lan  stlc_integers.lan  stlc_let.lan  stlc_letrec.lan  stlc_lists.lan  stlc_pairs.lan  stlc_sum.lan  stlc_tuples.lan  stlc_unit.lan  system_f.lan
gradualizer/dynamic/gradualized/: fpl.lan  recursive.lan  stlc.lan  stlc_cbn.lan  stlc_exc.lan  stlc_fix.lan  stlc_if.lan  stlc_inference.lan  stlc_integers.lan  (+8 more)
gradualizer/extra/: stlc_lists_filter.lan  stlc_lists_length.lan  stlc_lists_map.lan  stlc_lists_mapi.lan  stlc_lists_range.lan  stlc_multiple_consumers.lan  stlc_multiple_contra.lan  stlc_multiple_contra_1.lan  stlc_multiple_contra_2.lan  stlc_multiple_contra_3.lan  stlc_multiple_contra_4.lan  stlc_multiple_contra_6.lan  stlc_multiple_contra_7.lan  stlc_multiple_contra_8.lan  stlc_multiple_contra_9.lan  stlc_natrec.lan  stlc_option.lan
gradualizer/static/: stlc.lan  stlc_add.lan  stlc_exc.lan  stlc_fix.lan  stlc_if.lan  stlc_inference.lan  stlc_let.lan  stlc_letrec.lan  stlc_lists.lan  stlc_multiple_consumer.lan  stlc_pairs.lan  stlc_sum.lan  stlc_tuples.lan  stlc_unit.lan
lan/: fpl.lan  mj.lan
lnc/: dune-project  lang-n-change.opam
lnc/src/: aux.ml  dune  language.ml  language.mli  language_lexer.mll  language_parser.mly  lprolog.ml  lprolog.mli  ltr.ml  ltr.mli  ltr_lexer.mll  ltr_parser.mly  parse_language.ml  parse_language.mli  parse_ltr.ml  parse_ltr.mli  unify.ml  unify.mli
lnc/test/: dune  parse_ltr.ml  unify_typeof.ml
lnc/test/lan/: fpl.lan
lnc/test/tr/: big.tr  big_simple.tr
src/: aux.ml  dune  graph.ml  graph.mli  language.ml  language.mli  language_lexer.mll  language_parser.mly  lprolog.ml  lprolog.mli  ltr.ml  ltr.mli  ltr_lexer.mll  ltr_parser.mly  parse_language.ml  parse_ltr.ml  unify.ml  unify.mli
support/: dune  dune-project  transform.mli  transformer.ml
test/: compile_lprolog.ml  dune  parse_lan.ml  unify_typeof.ml
test/lan/: test1.lan
test/tr/: big_simple.tr
(+80 files in other folders)
