opam-version: "2.0.7"
version: "0.1"
maintainer: "Benjamin_Mourad@student.uml.edu"
authors: ["Benjamin Mourad"]
license: "BSD"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.7.1"}
  "core_kernel" {>= "0.14.0"}
  "menhir"
  "ppx_compare"
  "ppx_hash"
  "ppx_let"
  "ppx_sexp_conv"
]
