opam-version: "2.0.7"
version: "0.1"
maintainer: "Benjamin_Mourad@student.uml.edu"
authors: ["Benjamin Mourad"]
license: "GPLv3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "core_kernel" {>= "0.14.0"}
  "dune" {>= "2.7.1"}
  "menhir"
  "ocaml" {>= "4.08"}
  "ocamlformat"
  "ppx_compare"
  "ppx_hash"
  "ppx_let"
  "ppx_sexp_conv"
]
