(ocamllex language_lexer)

(menhir
 (modules language_parser)
 (flags --explain))

(library
 (name lang_n_change)
 (public_name lang-n-change)
 (flags -w -33)
 (libraries core_kernel)
 (modes byte native)
 (preprocess (pps ppx_compare
                  ppx_hash
                  ppx_let
                  ppx_sexp_conv)))
