(menhir
 (modules language_parser
          ltr_parser)
 (flags --explain))

(library
 (name lang_n_change)
 (public_name lang-n-change)
 (flags -w -33)
 (libraries core_kernel)
 (modes byte native)
 (preprocess (pps ppx_compare
                  ppx_hash
                  ppx_let
                  ppx_sexp_conv)))

;; these rules are manually defined to avoid
;; automata overflow in the lexer generator
;; (currently, only with the L-Tr lexer)

(rule
 (target language_lexer.ml)
 (deps language_lexer.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -q -o %{target} %{deps}))))

(rule
 (target ltr_lexer.ml)
 (deps ltr_lexer.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
